# arbitrary_precision

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: ArbitraryPrecisionDependencies.cmake  ArbitraryPrecisionDownloadExternal.cmake  ArbitraryPrecisionUtils.cmake
src/: CMakeLists.txt  complexprecision.h  fprecision.h  intervalprecision.h  iprecision.h  precisioncore.cpp
tests/: CMakeLists.txt  test.cpp
